--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ main {
     padding: 3em;
 }
 
+.hide_target {
+    display: none;
+}
+
 .text_to_write {
     color: grey;
     font-style: italic;
@@ -29,12 +33,12 @@ main {
   }
 
 #win {
-    animation: fadein 0.6s;
+    animation: fadein 0.7s;
     color: blue;
 }
 
-#loose {
-    animation: fadein 0.5s alternate-reverse 3;
+#lose {
+    animation: fadein 0.6s alternate-reverse 3;
     color: red;
 }
 
@@ -44,8 +48,8 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    background-color: #ffdcc3;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    background-color: #b9ffdc;
     border-radius: 15%;
     padding: 5%;
 }
